force-app/main/default/objects/SM_Digsvc__c/SM_Digsvc__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for the community self service login component</description>
    <label>SM_Digsvc</label>
</CustomObject>