force-app/main/default/objects/SM_Digsvc__c/fields/Communityname__c.field-meta.xml
<CustomField>
    <fullName>Communityname__c</fullName>
    <label>Community name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>