force-app/main/default/objects/SM_Digsvc__c/fields/communityurl__c.field-meta.xml
<CustomField>
    <fullName>communityurl__c</fullName>
    <description>@project : Smile / @description : contiendra l&apos;URL de la communauté sur laquelle se connecter</description>
    <label>communityurl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>