force-app/main/default/objects/SM_Digsvc__c/fields/instancetype__c.field-meta.xml
<CustomField>
    <fullName>instancetype__c</fullName>
    <description>@project : SMILE / @description permet de savoir si on est sur une org de prod / sandbox</description>
    <label>instancetype</label>
    <length>30</length>
    <type>Text</type>
</CustomField>