force-app/main/default/objects/SM_Digsvc__c/fields/orgurl__c.field-meta.xml
<CustomField>
    <fullName>orgurl__c</fullName>
    <description>url de l&apos;org dans laquelle se logguer et qui contient community</description>
    <label>orgurl</label>
    <length>100</length>
    <type>Text</type>
</CustomField>