force-app/main/default/objects/SM_Digsvc__c/fields/striss__c.field-meta.xml
<CustomField>
    <fullName>striss__c</fullName>
    <description>champ de la connected app pour le sso</description>
    <label>striss</label>
    <length>100</length>
    <type>Text</type>
</CustomField>