force-app/main/default/objects/SM_Digsvc__c/fields/usrnamepostfix__c.field-meta.xml
<CustomField>
    <fullName>usrnamepostfix__c</fullName>
    <description>postfix pour le nom des users cree a partir des contacts pour le self service community</description>
    <label>usrnamepostfix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>