force-app/main/default/objects/SM_Digsvc__c/fields/xdusr__c.field-meta.xml
<CustomField>
    <fullName>xdusr__c</fullName>
    <description>nom du compte technique qui sert pour creer des utilisateurs dynamiquement, compte de synchronisation entre systeme aussi utilise pour les webservices xdata</description>
    <label>xdusr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>